--- a/user-panel/config/dev.env
+++ b/user-panel/config/dev.env
@@ -1,7 +1,8 @@
 PORT = 4002
-MONGODB_URL = "use yours"
+MONGODB_URL = mongodb+srv://chinmayadatabase54:ctK5uRILF5Fi6Ssi@simpleprojects.axnf9.mongodb.net/storewise?retryWrites=true&w=majority
 REMOTE_HOST=localhost
 EMAIL_HOST= smtp.gmail.com
 EMAIL_PORT= 465
 EMAIL_USER= #######
 EMAIL_PASS = #########
+SECRET_KEY=stark
