--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,48 @@
 # Node.js
-**/node_modules/
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Logs
-**/logs/
+logs/
 *.log
 
-# Build
-**/dist/
-**/build/
+# Build output
+dist/
+build/
 
 # Environment variables
-**/.env
-**/.env.local
-**/.env.*.local
+admin-panel/config/dev.env
+user-panel/config/dev.env
 
-# Coverage
-**/coverage/
+# Coverage reports
+coverage/
 
-# IDE/OS files
+# Temporary files and folders
 .DS_Store
 *.swp
-.vscode/
-*.idea/
+*.tmp
+*.temp
 
-# Docker
+# IDE/OS files
+.vscode/
+.idea/
+
+# Docker-specific
 docker-compose.override.yml
 
 # AWS credentials
 .aws/
+
+# Ignore package-lock.json if needed
+package-lock.json
+
+# Ignore test output
+test-output/
+
+# Ignore Admin Panel Node Modules
+admin-panel/node_modules/
+
+# Ignore User Panel Node Modules
+user-panel/node_modules/
